app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: plivo-task
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-app
